# Multi-Timeframe_Analysis

./: .gitattributes  .gitignore  .gitmessage.txt  .prettierrc  CONTRIBUTING.md  FXStrategies.spec  README.md  cc.ps1  commitlint.config.cjs  pyproject.toml  pyrightconfig.json
.githooks/: commit-msg
.github/: pull_request_template.md
.github/workflows/: commitlint.yml  release-build.yml
frontend/: eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: cardSymbol.tsx  indicatorCard.tsx  minichart.tsx  settings.tsx  signalBadge.tsx  symbolSelector.tsx  themeToogle.tsx
frontend/src/hooks/: mutationRemoveSymbol.ts  mutationSymbol.ts  useIndicators.ts  useMTSymbols.ts  usePywebviewReady.ts  useSymbols.ts
src/: main.py
src/MQL/: __init__.py  codes.py  errors.py  get_rates.py  get_symbols.py  initialize.py  mt5_types.py
src/config/: __init__.py  config.py
src/controllers/: __init__.py  indicators_controller.py  symbol_controller.py
src/database/: __init__.py  init.py
src/models/: __init__.py  symbol_model.py
src/runtime/: __init__.py  single_instance.py
src/scripts/: __init__.py  build.py  commit.py  dev.py  setup_git_hooks.py  validate_commit_message.py
src/services/: api.py
src/use_cases/: __init__.py  calc_adx.py  calc_bb_breakout.py  calc_macd.py  calc_pivot_point.py  calc_rsi.py  calc_support_resistance.py  calc_vwap_bands.py  calc_williams_r.py  indicator_types.py  indicators.py  moving_average_cross.py
typings/MetaTrader5/: __init__.pyi
(+12 files in other folders)
