[project]
name = "fx-strategies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "metatrader5>=5.0.5735",
    "pandas-ta>=0.4.71b0",
    "pyinstaller>=6.19.0",
    "pywebview>=6.1",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = ["pyright>=1.1.408", "ruff>=0.15.11", "watchfiles>=1.1.1"]

[tool.ruff]
line-length = 200
target-version = "py311"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # import sorting
    "UP", # pyupgrade
    "B",  # bugbear
]
ignore = [
    "E501", # deixa o formatter cuidar de linha longa
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
